# recursive-nn

./: .gitignore  README.md  pyproject.toml
checkpoints/hagrid/gen_000/: best.pt
configs/: default.yaml  hagrid.yaml
notebooks/: experiments.ipynb
scripts/: download_hagrid.py  evaluate.py  live_gesture.py  train.py
src/: __init__.py
src/data/: __init__.py  loaders.py
src/distillation/: __init__.py  ema.py  losses.py  temperature.py  trainer.py
src/generations/: __init__.py  checkpoint.py  manager.py  metrics.py
src/models/: __init__.py  base.py  mlp.py  resnet.py  stochastic_depth.py  transformer.py
tests/: conftest.py  test_distillation.py  test_ema.py  test_generations.py  test_models.py  test_stochastic_depth.py  test_transformer.py
